# manipulative-ai

./: .gitignore  dataset_analysis_report.md  implementation_plan.md  instructions.md  persuasion_dataset_Unified_EN-3.xlsx  persuasion_dataset_Unified_EN-3_CLEANED.xlsx
societal-discussion/apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
societal-discussion/apps/api/alembic/: env.py
societal-discussion/apps/api/alembic/versions/: 001_initial_schema.py  002_add_prompt_configs.py  003_add_terms_config.py  004_add_llm_config.py  005_add_experiment_and_topics.py  006_add_timezone_to_timestamps.py  007_add_few_shot_examples_to_chats.py
societal-discussion/apps/api/scripts/: seed_database.py
societal-discussion/apps/api/src/: __init__.py  config.py  database.py  main.py  seed.py
societal-discussion/apps/api/src/models/: __init__.py  chat.py  experiment_config.py  llm_config.py  message.py  participant.py  prompt_config.py  statement.py  terms_config.py  topic_config.py
societal-discussion/apps/api/src/routers/: __init__.py  admin.py  chats.py  participants.py
societal-discussion/apps/api/src/services/: __init__.py  block_assignment.py  conversation_logger.py  encryption.py  example_selector.py  llm_client.py  llm_models.py  prompt_builder.py  topic_coverage.py
societal-discussion/apps/api/src/services/llm_providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
societal-discussion/apps/api/tests/: __init__.py  test_admin_chats.py  test_admin_stats_export.py  test_api.py  test_prompt_builder.py  test_seed.py
(+75 files in other folders)
