[project]
name = "societal-discussion-api"
version = "0.1.0"
description = "Backend API for societal discussion research project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
